--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					<h2>Get Started</h2>
 					
 					<h3>Highly Recommended</h3>
-					<p>Subscribe to <a href="http://trentrichardson.com" title="TrentRichardson.com">my newsletter</a> and follow me <a href="http://twitter.com/practicalweb" title="Follow me on Twitter">@practicalweb</a>.</p>
+					<p>Subscribe to <a href="http://trentrichardson.com/category/impromptu/" title="TrentRichardson.com">my newsletter</a> and follow me <a href="http://twitter.com/practicalweb" title="Follow me on Twitter">@practicalweb</a>.</p>
 
 					<h3>Donation</h3>
 					<a href="http://carbounce.com" title="Car Bounce" style="float: right; display: inline-block;width:300px;padding: 10px;background-color: #fbfbfb;border: dotted 4px #e8e8e8;color: #9EC45F;font-size: 14px;text-decoration:none;letter-spacing:1px;"><img src="http://carbounce.com/img/logo_small.png" alt="Car Bounce" align="left" style="margin-right: 20px;"/>Try my new app to keep you informed of your car's financing status and value.</a>	
@@ -133,12 +133,12 @@
 					<h3 id="Download">Download</h3>
 					<ul>
 						<li><a href="https://github.com/trentrichardson/jQuery-Impromptu" title="Fork it on Github">Github</a></li>
-						<li><a href="scripts/mootools-impromptu.3.1.js" title="Download Mootools Impromptu Development">Moopromptu</a></li>
+						<li><a href="https://github.com/trentrichardson/Moopromptu" title="Download Mootools Impromptu Development">Moopromptu</a></li>
 					</ul>
 
 					<h3>Version</h3>
-					<p>Version 4.0.1</p>
-					<p>Last updated on 03/03/2012</p>
+					<p>Version 4.1</p>
+					<p>Last updated on 12/02/2012</p>
 
 					<p>jQuery Impromptu is currently available for use in all personal or commercial projects under both MIT and GPL licenses. This means that you can choose the license that best suits your project, and use it accordingly. </p>
 					<ul>
@@ -533,10 +533,10 @@ $.prompt(statesdemo);</pre>
 					<h3>Advanced</h3>
 					<p>The following are example demonstrations of various useful utilities with Impromptu.</p>
 					<ul>
-						<li><a href="demos/user_manager.html" title="User Manager Demo">User Manager</a></li>
-						<li><a href="demos/survey.html" title="Survey Demo">Survey</a></li>
-						<li><a href="demos/loan_calculator.html" title="Loan Calculator Demo">Loan Calculator</a></li>
-						<li><a href="demos/select_filter.html" title="Select Dropdown Search Filter Demo">Select Dropdown Search Filter</a></li>
+						<li><a href="demos/user_manager.html" title="User Manager Demo" target="_BLANK">User Manager</a></li>
+						<li><a href="demos/survey.html" title="Survey Demo" target="_BLANK">Survey</a></li>
+						<li><a href="demos/loan_calculator.html" title="Loan Calculator Demo" target="_BLANK">Loan Calculator</a></li>
+						<li><a href="demos/select_filter.html" title="Select Dropdown Search Filter Demo" target="_BLANK">Select Dropdown Search Filter</a></li>
 					</ul>
 				</div>
 			</div>
