--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@ tourStates = [
 	},
 	{
 		title: 'Learn More',
-		html: 'If you would like to learn more please consider purchasing a copy of Impromptu From I to U. If you found Impromptu helpful, please see the links to the left, if not, thanks for stopping by!',
+		html: 'If you would like to learn more please consider purchasing a copy of Impromptu From I to U. If you found Impromptu helpful, please see the links to the left. If not, thanks for stopping by!',
 		buttons: { Done: 2 },
 		focus: 1,
 		position: { container: '.donation', x: 120, y: -70, width: 400, arrow: 'tl lb' },
