Adds twitter bootstrap support

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">  
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml"> 
+<!DOCTYPE html>
+<html> 
 	<head> 
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<meta charset="UTF-8" />
+
 		<title>jQuery Impromptu</title>
 		<meta name="Description" content="The home page of jQuery Impromptu. jQuery Impromptu is an extention to help provide a more pleasant way to spontaneously prompt a user for input." />
 		<meta name="Keywords" content="Impromptu,jQuery Impromptu,jQuery alert,javascript alert,alert,jQuery prompt,javascript prompt,prompt,jQuery confirm,javascript confirm,confirm,jQuery modal,javascript modal,modal,jQuery plugin,jQuery extension" />
@@ -51,7 +52,7 @@
 		
 		<link rel="stylesheet" media="all" type="text/css" href="jquery-impromptu.css" />
 		
-		<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.0.min.js"></script>
+		<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 		<script type="text/javascript" src="jquery-impromptu.js"></script>
 		<script type="text/javascript">
 			
@@ -545,6 +546,7 @@ $.prompt(statesdemo);</pre>
 					<h3>Advanced</h3>
 					<p>The following are example demonstrations of various useful utilities with Impromptu.</p>
 					<ul>
+						<li><a href="demos/twitter_bootstrap.html" title="Twitter bootstrap theme" target="_BLANK">Twitter bootstrap theme</a></li>
 						<li><a href="demos/user_manager.html" title="User Manager Demo" target="_BLANK">User Manager</a></li>
 						<li><a href="demos/survey.html" title="Survey Demo" target="_BLANK">Survey</a></li>
 						<li><a href="demos/loan_calculator.html" title="Loan Calculator Demo" target="_BLANK">Loan Calculator</a></li>
