Updates classes option

--- a/demos/purecss.html
+++ b/demos/purecss.html
@@ -3,13 +3,13 @@
 	<head>
 		<meta charset="UTF-8" />
 
-		<title>jQuery Impromptu with Twitter Bootstrap</title>
+		<title>jQuery Impromptu with PureCSS</title>
 
 		<meta name="Description" content="jQuery Impromptu theme with twitter bootstrap." />
 		<meta name="Keywords" content="jquery, impromptu, prompt, twitter, bootstrap" />
 		
 		<link rel="stylesheet" media="all" type="text/css" href="../themes/base.css" />		
-		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.1.0/pure-min.css" />
 		
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 		<script type="text/javascript" src="../jquery-impromptu.js"></script>
@@ -20,10 +20,10 @@
 				var temp = {
 					state0: {
 						title: 'Content Rating',
-						html:'<label class="radio" for="rate_content_poor"><input type="radio" name="rate_content" id="rate_content_poor" value="Poor" class="radioinput" />Poor</label>'+
-								'<label class="radio" for="rate_content_ok"><input type="radio" name="rate_content" id="rate_content_ok" value="Ok" class="radioinput" />Ok</label>'+
-								'<label class="radio" for="rate_content_good"><input type="radio" name="rate_content" id="rate_content_good" value="Good" class="radioinput" />Good</label>'+
-								'<label class="radio" for="rate_content_excellent"><input type="radio" name="rate_content" id="rate_content_excellent" value="Excellent" class="radioinput" />Excellent!</label>',
+						html:'<label class="radio" for="rate_content_poor"><input type="radio" name="rate_content" id="rate_content_poor" value="Poor" class="radioinput" /> Poor</label>'+
+								'<label class="pure-radio" for="rate_content_ok"><input type="radio" name="rate_content" id="rate_content_ok" value="Ok" class="radioinput" /> Ok</label>'+
+								'<label class="pure-radio" for="rate_content_good"><input type="radio" name="rate_content" id="rate_content_good" value="Good" class="radioinput" /> Good</label>'+
+								'<label class="pure-radio" for="rate_content_excellent"><input type="radio" name="rate_content" id="rate_content_excellent" value="Excellent" class="radioinput" /> Excellent!</label>',
 						buttons: { Cancel: false, Next: true },
 						focus: 1,
 						submit:function(e,v,m,f){ 
@@ -36,12 +36,12 @@
 					state1: {
 						title: 'Needs Improvement',
 						html:'<p>Check all which need improvement:</p>'+
-								'<label class="checkbox" for="rate_improve_colors"><input type="checkbox" name="rate_improve" id="rate_improve_colors" value="Color Scheme" class="radioinput" />Color Scheme</label>'+
-								'<label class="checkbox" for="rate_improve_graphics"><input type="checkbox" name="rate_improve" id="rate_improve_graphics" value="Graphics" class="radioinput" />Graphics</label>'+
-								'<label class="checkbox" for="rate_improve_readability"><input type="checkbox" name="rate_improve" id="rate_improve_readability" value="readability" class="radioinput" />Readability</label>'+
-								'<label class="checkbox" for="rate_improve_content"><input type="checkbox" name="rate_improve" id="rate_improve_content" value="Content" class="radioinput" />Content</label>'+
-								'<label class="checkbox" for="rate_improve_other"><input type="checkbox" name="rate_improve" id="rate_improve_other" value="Other" class="radioinput" />Other</label>'+
-								'<input type="text" name="rate_improve_other_txt" id="rate_improve_other_txt" value="" placeholder="Other Description" />',
+								'<label class="pure-checkbox" for="rate_improve_colors"><input type="checkbox" name="rate_improve" id="rate_improve_colors" value="Color Scheme" class="radioinput" /> Color Scheme</label>'+
+								'<label class="pure-checkbox" for="rate_improve_graphics"><input type="checkbox" name="rate_improve" id="rate_improve_graphics" value="Graphics" class="radioinput" /> Graphics</label>'+
+								'<label class="pure-checkbox" for="rate_improve_readability"><input type="checkbox" name="rate_improve" id="rate_improve_readability" value="readability" class="radioinput" /> Readability</label>'+
+								'<label class="pure-checkbox" for="rate_improve_content"><input type="checkbox" name="rate_improve" id="rate_improve_content" value="Content" class="radioinput" /> Content</label>'+
+								'<label class="pure-checkbox" for="rate_improve_other"><input type="checkbox" name="rate_improve" id="rate_improve_other" value="Other" class="radioinput" /> Other</label>'+
+								'<input type="text" class="pure-input-1" name="rate_improve_other_txt" id="rate_improve_other_txt" value="" placeholder="Other Description" />',
 						buttons: { Back: -1, Cancel: 0, Next: 1 },
 						focus: 2,
 						submit:function(e,v,m,f){
@@ -73,7 +73,7 @@
 					},
 					state3: {
 						title: 'Additional Comments',
-						html:'<p>Please leave any other comments you have about this site:</p><div class="field"><textarea id="rate_comments" name="rate_comments"></textarea></div>',
+						html:'<p>Please leave any other comments you have about this site:</p><div class="field"><textarea class="pure-input-1" id="rate_comments" name="rate_comments"></textarea></div>',
 						buttons: { Back: -1, Cancel: 0, Finish: 1 },
 						focus: 2,
 						submit:function(e,v,m,f){ 
@@ -102,10 +102,10 @@
 						prompt: '',
 						close: '',
 						title: 'lead',
-						message: '',
+						message: 'pure-form',
 						buttons: '',
-						button: 'btn',
-						defaultButton: 'btn-primary'
+						button: 'pure-button',
+						defaultButton: 'pure-button-primary'
 					}
 				});
 			}
