Updates docs, examples, and classes option

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 	button: 'btn',
 	defaultButton: 'btn-primary'
 }</code></pre>
-						To view a complete demo see the examples section below.</dd>
+						Use the base theme in place of the default css file since it has minimal styling, allowing other css frameworks to work their magic.  To view a complete demo see the examples section below.</dd>
 
 						<dt>close</dt>
 						<dd>A function to be called when the prompt is closed and just before being removed from the DOM. <em>Default: function(event[, value, message, formVals]){}</em> Last three paremeters available only when button was clicked.</dd>
@@ -204,7 +204,7 @@
 						<dd>If the prompt should close when the fade is clicked (true doesn't close). <em>Default: true</em></dd>
 						
 						<dt>prefix</dt>
-						<dd>A prefix to be used for all css classes and html object id's. <em>Default: 'jqi'</em></dd>
+						<dd>A prefix to be used for all css classes and html object id's.  Use this option when you want to change themes. <em>Default: 'jqi'</em></dd>
 						
 						<dt>promptspeed</dt>
 						<dd>The prefered opacity of the showing of the prompt ("slow", "fast", number). <em>Default: "fast"</em></dd>
