Fix purecss example link

--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@ $.prompt(statesdemo);</pre>
 					<p>The following are example demonstrations of various useful utilities with Impromptu.</p>
 					<ul>
 						<li><a href="demos/twitter_bootstrap.html" title="Twitter bootstrap theme" target="_BLANK">Twitter bootstrap theme</a> (<a href="http://twitter.github.io/bootstrap/" title="Twitter Bootstrap">Bootstrap</a>)</li>
-						<li><a href="demos/twitter_bootstrap.html" title="Twitter bootstrap theme" target="_BLANK">PureCSS theme</a> (<a href="http://purecss.io/" title="Pure CSS Framework">Pure</a>)</li>
+						<li><a href="demos/purecss.html" title="YUI Pure CSS theme" target="_BLANK">PureCSS theme</a> (<a href="http://purecss.io/" title="Pure CSS Framework">Pure</a>)</li>
 						<li><a href="demos/user_manager.html" title="User Manager Demo" target="_BLANK">User Manager</a></li>
 						<li><a href="demos/survey.html" title="Survey Demo" target="_BLANK">Survey</a></li>
 						<li><a href="demos/loan_calculator.html" title="Loan Calculator Demo" target="_BLANK">Loan Calculator</a></li>
