--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
 						<dt>name</dt>
 						<dd>A valid variable name to access the state by. <em>Default: State's array index or object key</em></dd>
 
+						<dt>title</dt>
+						<dd>A string to be used as the title of the state</dd>
+
 						<dt>html</dt>
 						<dd>A string of html or text for the content</dd>
 						
@@ -405,7 +408,7 @@ $.prompt(statesdemo);</pre>
 
 
 <div class="example-container">
-	<p>To use a substate create your states as normal, but use the subState option.</p>
+	<p>To use a substate create your states as normal, but use the subState option when calling $.prompt.goToState().</p>
 <pre class="code">var statesdemo = {
 	state0: {
 		title: 'Terms of Use',
@@ -465,7 +468,7 @@ tourStates = [
 		title: 'Welcome',
 		html: 'Ready to take a quick tour of jQuery Impromptu?',
 		buttons: { Next: 1 },
-		focus: 1,
+		focus: 0,
 		position: { container: 'h1', x: 200, y: 60, width: 200, arrow: 'tc' },
 		submit: tourSubmitFunc
 	},
@@ -505,7 +508,7 @@ tourStates = [
 		title: 'Learn More',
 		html: 'If you would like to learn more please consider purchasing a copy of Impromptu From I to U. If you found Impromptu helpful, please see the links to the left. If not, thanks for stopping by!',
 		buttons: { Done: 2 },
-		focus: 1,
+		focus: 0,
 		position: { container: '.ebook', x: 280, y: 50, width: 300, arrow: 'lt' },
 		submit: tourSubmitFunc
 	}
