Updates docs, new version ready

--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
 					</ul>
 
 					<h3>Version</h3>
-					<p>Version 4.4</p>
-					<p>Last updated on 07/07/2013</p>
+					<p>Version 5.0</p>
+					<p>Last updated on 08/24/2013</p>
 
 					<p>jQuery Impromptu is currently available for use in all personal or commercial projects under both MIT and GPL licenses. This means that you can choose the license that best suits your project, and use it accordingly. </p>
 					<ul>
-						<li><a href="http://trentrichardson.com/Impromptu/GPL-LICENSE.txt" title="GPL License">GPL License</a></li>
-						<li><a href="http://trentrichardson.com/Impromptu/MIT-LICENSE.txt" title="MIT License">MIT License</a></li>
+						<li><a href="GPL-LICENSE.txt" title="GPL License">GPL License</a></li>
+						<li><a href="MIT-LICENSE.txt" title="MIT License">MIT License</a></li>
 					</ul>
 					
 
@@ -454,7 +454,7 @@ $.prompt(statesdemo);</pre>
 
 
 <div class="example-container" id="TourExample">
-	<p>To use states pass in a collection (array or object) of objects with common properties (html, buttons, focus, submit, position..).</p>
+	<p>To use tour or tooltip like features pass in a collection (array or object) of state objects with the position property.</p>
 <pre class="code" id="TourCode">var tourSubmitFunc = function(e,v,m,f){
 			if(v === -1){
 				$.prompt.prevState();
