Pull #22 - Added support for defaultButton when focus is a selector by Corey Caldwell

--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
 						
 						<dt>focus</dt>
 						<dd>Index of the button to focus or selector to element to focus. <em>Default: 0</em></dd>
+
+						<dt>defaultButton</dt>
+						<dd>Index of the button to focus.  Similar to the focus option, but if focus is a selector this can still style the button as the default. <em>Default: 0</em></dd>
 											
 						<dt>submit</dt>
 						<dd>A function to be called when the prompt is submitted. <em>Default: function(event, value, message, formVals){}</em> Return false or event.preventDefault() to keep the prompt open. Event object also has properties event.state and event.stateName.</dd>
