Add some grunt, jshint cleanup

--- a/index.html
+++ b/index.html
@@ -118,11 +118,7 @@
 					<p>Version 5.1.0</p>
 					<p>Last updated on 08/24/2013</p>
 
-					<p>jQuery Impromptu is currently available for use in all personal or commercial projects under both MIT and GPL licenses. This means that you can choose the license that best suits your project, and use it accordingly. </p>
-					<ul>
-						<li><a href="GPL-LICENSE.txt" title="GPL License">GPL License</a></li>
-						<li><a href="MIT-LICENSE.txt" title="MIT License">MIT License</a></li>
-					</ul>
+					<p>jQuery Impromptu is currently available for use in all personal or commercial projects under the <a href="MIT-LICENSE.txt" title="MIT License">MIT License</a>.</p>
 					
 
 
@@ -601,7 +597,7 @@ $.prompt(statesdemo);</pre>
 		</div>
 
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-		<script type="text/javascript" src="jquery-impromptu.js"></script>
+		<script type="text/javascript" src="jquery-impromptu.min.js"></script>
 		<script type="text/javascript">
 			
 			$(function(){
