--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -15,6 +15,7 @@
     
     <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine.js"></script>
     <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
+    <script type="text/javascript" src="lib/jasmine-jquery.js"></script>
 
     <script type="text/javascript" src="../src/jquery-impromptu.js"></script>
 
