--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 <head>
-    <title>jquery-impromptu Spec Runner</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>jquery-impromptu Jasmine Spec Runner v2.0.3</title>
 
-    <link rel="shortcut icon" type="image/png" href="lib/jasmine-1.3.1/jasmine_favicon.png">
-    <link rel="stylesheet" type="text/css" href="lib/jasmine-1.3.1/jasmine.css">
+    <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.0.3/jasmine_favicon.png">
+    <link rel="stylesheet" type="text/css" href="lib/jasmine-2.0.3/jasmine.css">
     <style>
         .jqibox {
             display: none;
@@ -12,46 +13,20 @@
     </style>
 
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    
-    <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine.js"></script>
-    <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
+
+    <script type="text/javascript" src="lib/jasmine-2.0.3/jasmine.js"></script>
+    <script type="text/javascript" src="lib/jasmine-2.0.3/jasmine-html.js"></script>
+    <script type="text/javascript" src="lib/jasmine-2.0.3/boot.js"></script>
     <script type="text/javascript" src="lib/jasmine-jquery.js"></script>
 
+    <!-- include source files here... -->
     <script type="text/javascript" src="../src/jquery-impromptu.js"></script>
 
+    <!-- include spec files here... -->
     <script type="text/javascript" src="jquery-impromptu_spec.js"></script>
-
-    <script type="text/javascript">
-        (function() {
-            var jasmineEnv = jasmine.getEnv();
-            jasmineEnv.updateInterval = 1000;
-
-            var htmlReporter = new jasmine.HtmlReporter();
-
-            jasmineEnv.addReporter(htmlReporter);
-
-            jasmineEnv.specFilter = function(spec) {
-                return htmlReporter.specFilter(spec);
-            };
-
-            var currentWindowOnload = window.onload;
-
-            window.onload = function() {
-                if (currentWindowOnload) {
-                    currentWindowOnload();
-                }
-                execJasmine();
-            };
-
-            function execJasmine() {
-                jasmineEnv.execute();
-            }
-
-        })();
-    </script>
-
+    
 </head>
-<body>
 
+<body>
 </body>
 </html>
