Add tests and build serialize method

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -12,7 +12,7 @@
         }
     </style>
 
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="lib/jquery.min.js"></script>
 
     <script type="text/javascript" src="lib/jasmine-2.0.3/jasmine.js"></script>
     <script type="text/javascript" src="lib/jasmine-2.0.3/jasmine-html.js"></script>
