#61 - Add ability to open the prompt to a specific state: initialState option added

--- a/src/index.html
+++ b/src/index.html
@@ -212,6 +212,9 @@ var api = new Impromptu( msg , options );</code></pre>
 						<dt>focus</dt>
 						<dd>Index of the button to focus or selector to element to focus. <em>Default: 0</em></dd>
 
+						<dt>initialState</dt>
+						<dd>The state to be shown first.  Pass either a string for state name or numeric index of the state. <em>Default: 0</em></dd>
+
 						<dt>loaded</dt>
 						<dd>A function to be called when the prompt is fully loaded  <em>Default: function(event){}</em></dd>
 						
